--- a/package.json
+++ b/package.json
@@ -46,8 +46,11 @@
     "jest-environment-jsdom": "^29.7.0",
     "jest-svg-transformer": "^1.0.0",
     "postcss": "^8.4.38",
+    "postcss-nested": "^6.0.1",
     "prettier": "^3.0.3",
     "prettier-plugin-tailwindcss": "^0.6.4",
+    "stylelint": "^16.6.1",
+    "stylelint-config-standard": "^36.0.0",
     "tailwindcss": "^3.4.4",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2",
